# findmytakeover

./: .gitignore  MANIFEST.in  Makefile  README.md  SETUP.md  findmytakeover.py  publish.sh  pyproject.toml  requirements.txt  setup.py  setup_pip.sh
collector/: aws.py  gcp.py  msazure.py
findmytakeover/: __init__.py  cli.py
